--- a/beautifydanmu.html
+++ b/beautifydanmu.html
@@ -37,13 +37,13 @@
         }
     </style>
 </head>
+<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 <script>
     let movingElem;
     let space;
     let max;
     let elemList;
     let file;
-    let lastRead;
 
     function init(aFile) {
         movingElem = [];
@@ -51,7 +51,6 @@
         max = 0;
         elemList = [];
         file = aFile;
-        lastRead = new Date().getTime();
     }
 
     function addMovingElem(elem) {
@@ -182,43 +181,31 @@
     }
 
     function readFile() {
-        let reader = new FileReader();
-        reader.readAsText(file);
-        reader.onload = function() {
-            let split = this.result.split("\n")
+        $.get("http://127.0.0.1", function(data) {  
+            let split = data.split("\n")
             for (let i = 0; i < split.length; i++) {
                 let current = split[i];
                 let index = current.indexOf(",");
-                let time = current.substr(0, index);
-
-                if (parseInt(time) < lastRead) {
-                    return;
-                }
-
-                current = current.substr(index + 1);
-                index = current.indexOf(",");
                 let mode = current.substr(0, index);
 
                 current = current.substr(index + 1);
-                index = current.indexOf(",");
-                let sender = current.substr(0, index);
-                if (mode === "3") {
-                    addNewElem(3, sender);
-                    return;
-                }
+                if (mode == "3") {
+                    addNewElem(3, current, "null");
+                } else {
+                    index = current.indexOf(",");
+                    let sender = current.substr(0, index);
 
-                let content = current.substr(index + 1);
-
-                if (mode === "1") {
-                    addNewElem(1, sender, content);
-                    return;
-                }
-                if (mode === "2") {
-                    addNewElem(2, sender, content);
+                    let content = current.substr(index + 1);
+                    if (mode == "1") {
+                        addNewElem(1, sender, content);
+                        return;
+                    }
+                    if (mode == "2") {
+                        addNewElem(2, sender, content);
+                    }
                 }
             }
-            lastRead = new Date().getTime();
-        }
+        });
     }
 
     function keepRead() {
@@ -229,16 +216,11 @@
 <body>
 <div id="mainbody">
     <p style="display: none" id="space">&nbsp;</p>
-    <input type="file" id="files" onchange="fileImport()">
 </div>
 <script>
-    function fileImport() {
-        let selectedFile = document.getElementById('files').files[0];
-        document.getElementById("mainbody").removeChild(document.getElementById("files"));
-        init(selectedFile);
-        keepRead();
-        keepMove();
-    }
+    init();
+    keepRead();
+    keepMove();
 </script>
 </body>
 </html>
